[gd_scene load_steps=16 format=2]

[ext_resource path="res://Ui/Scripts/Death_Ui.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/Spirit's Sword.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Music/sonidos/button_up.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Music/sonidos/on button.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Music/sonidos/open menu death.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/UI/Buttons_press.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/UI/Buttons_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/UI/Buttons_hover.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade-in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade-out"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Death Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.309804, 0.0784314, 0, 0.392157 )

[node name="VBoxButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -149.0
margin_top = -288.0
margin_right = 149.0
margin_bottom = -62.0
custom_constants/separation = 50
alignment = 1

[node name="Menu principal" type="Button" parent="VBoxButtons"]
margin_right = 298.0
margin_bottom = 42.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Menu Principal"

[node name="Restart" type="Button" parent="VBoxButtons"]
margin_top = 92.0
margin_right = 298.0
margin_bottom = 134.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Volver a Empezar"

[node name="Salir" type="Button" parent="VBoxButtons"]
margin_top = 184.0
margin_right = 298.0
margin_bottom = 226.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Salir"

[node name="VBoxMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.0
margin_top = -171.5
margin_right = 428.0
margin_bottom = 236.5
custom_constants/separation = 150

[node name="Death Text" type="Label" parent="VBoxMenu"]
margin_right = 855.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 4 )
text = "Has muerto, quieres volver a intentarlo?"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade-in = SubResource( 2 )
anims/fade-out = SubResource( 3 )

[node name="AudioAparecer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 16.824
bus = "Sfx"

[node name="AudioMouseOnButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 4.0
bus = "Sfx"

[node name="AudioButton_Down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[connection signal="button_down" from="VBoxButtons/Menu principal" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxButtons/Menu principal" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxButtons/Menu principal" to="." method="_on_Menu_principal_pressed"]
[connection signal="button_down" from="VBoxButtons/Restart" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxButtons/Restart" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxButtons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="button_down" from="VBoxButtons/Salir" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxButtons/Salir" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxButtons/Salir" to="." method="_on_Salir_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
